fix(snapshot-card): Use ion-card to wrap component and add link to card when not using button

--- a/src/components/job-card/snapshot-card.css
+++ b/src/components/job-card/snapshot-card.css
@@ -19,6 +19,7 @@ floodteam-snapshot-card .widget {
   display: block;
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
+  margin: 0 auto;
   max-width: 430px;
   min-width: 250px;
   height: 375px;
